<resources>
    <string name="app_name">SocialMed</string>
    <string name="password">Contraseña</string>
    <string name="login">Iniciar sesión</string>
    <string name="no_tienes_una_cuenta">¿No tienes una cuenta?</string>
    <string name="register">Regístrate</string>
    <string name="email">Email</string>
    <string name="socialmed_logo">Socialmed Logo</string>
    <string name="api_url">https://mediapros-socialmed-api.azurewebsites.net/</string>
    <string name="name">Nombre</string>
    <string name="lastName">Apellido</string>
    <string name="age">Edad</string>
    <string name="specialist">Especialidad</string>
    <string name="workPlace">Lugar de trabajo</string>
    <string name="biography">Biografía</string>
    <string name="doc_pic">Doc pic</string>
    <string name="doctores_recomendados">Doctores recomendados</string>
    <string name="report_error">Reporta un error</string>
    <string name="title">Título</string>
    <string name="content">Contenido</string>
    <string name="send">Enviar</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="inicio">Inicio</string>
    <string name="forum">Foro</string>
    <string name="perfil">Perfil</string>
    <string name="recomendar">Recomendar</string>
    <string name="mas">Más</string>
    <string name="mas_opciones">Más opciones</string>
    <string name="entradas_de_foro_guardadas">Entradas de foro guardadas</string>
    <string name="chiste_del_dia">Chiste del día</string>
    <string name="chistes_guardados">Chistes guardados</string>
    <string name="editar">Editar</string>
    <string name="edita_tu_perfil">Edita tu perfil</string>
    <string name="title_activity_edit_login">EditLoginActivity</string>
    <string name="ingrese_su_contrase_a">Ingrese su contraseña</string>
    <string name="confirmar">Confirmar</string>
    <string name="url_de_imagen_de_perfil">URL de imagen de perfil</string>
    <string name="acepto_terminos_y_condiciones">Acepto términos y condiciones</string>

</resources>