<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".errors.controller.activities.ReportErrorsActivity">

    <TextView
        android:id="@+id/tvReport"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="117dp"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="117dp"
        android:text="@string/report_error"
        android:textColor="#00BCD4"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etReportTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="35dp"
        android:ems="10"
        android:hint="@string/title"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvReport" />

    <EditText
        android:id="@+id/etReportContent"
        android:layout_width="0dp"
        android:layout_height="300dp"
        android:layout_marginStart="35dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="35dp"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/content"
        android:inputType="textMultiLine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etReportTitle" />

    <Button
        android:id="@+id/btSendReport"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="161dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="161dp"
        android:text="@string/send"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etReportContent" />

</androidx.constraintlayout.widget.ConstraintLayout>